links in handout are opened in default browser #37